# random

./: CMakeLists.txt  README.md
src/: Draw.cpp  Main.cpp  Random.cpp  main  main.cpp
src/defs/: main.hpp
