cmake_minimum_required(VERSION 3.16)
project(Random)
find_package( OpenCV REQUIRED )
add_executable(Random src/main.cpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
target_sources(Random PRIVATE src/Random.cpp)
target_sources(Random PRIVATE src/Draw.cpp)
target_link_libraries(Random ${OpenCV_LIBS})